--- a/draws.html
+++ b/draws.html
@@ -235,8 +235,11 @@ a:active{background:orange;}
     
     </div>
 
+    <img src="images/app.jpg" class="img-fluid" alt="Responsive image">
+
 
  
     
 </body>
+
 </html>
