--- a/index.html
+++ b/index.html
@@ -382,6 +382,10 @@ pre .code {
         </div><!-- end of container -->
     </section> 
 
+<img src="images/app table.jpg" class="img-fluid" alt="Responsive image">
+
+
+<img src="images/app.jpg" class="img-fluid" alt="Responsive image">
 
 
 <img src="images/note.jpg" class="img-fluid" alt="Responsive image">
@@ -419,4 +423,5 @@ pre .code {
 
 
     <script src="bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
+
 
