--- a/tables.html
+++ b/tables.html
@@ -140,48 +140,13 @@ js-preloader {
 
 
 a:link{color:black;text-decoration:wavy}
-a:visited{color:black;}
-a:active{background:orange;}
 
-
-
-
-@keyframes comefromright
-{
-from{margin-right:900px;}
-to{margin-right:0px;}
-}
-
-@keyframes fadout
-{
-from{opacity:0;transform:scale(1.5);}
-to{opacity:0.99;}
-}
-
-@keyframes blink
-{from{opacity:0}
-to{opacity:1}
-}
-
-
-@keyframes mov
-{
-from{margin-left:50%;}
-to{margin-left:30px;}
-}
-
-@keyframes move
-{
-from{margin-left:-30%;}
-to{margin-left:30%;}
-}
 
 
 
 #navbar ol
 {
 margin:auto;
-
 margin-top:50px;
 text-align:centre;
 }
@@ -190,10 +155,10 @@ text-align:centre;
 {
 list-style:none;
 transition:1s;
-text-align: center;
-font-size: 30px;
+text-align:center;
+font-size: 20px;
 text-decoration:overline;
-transition:2s;
+
 
 
 }
@@ -201,7 +166,7 @@ transition:2s;
 
 #navbar ol li:hover
 {
-transform:scale(1)rotate(6deg);
+transform:scale(1);
 text-decoration: underline;
 
 
@@ -240,7 +205,7 @@ text-decoration: underline;
 
 
 
-<h1 style="text-align: center; font-size: 50px;margin-top: 50px;text-shadow: 1px 1px 0px green;">Infinite Table</h1>
+<h1 style="text-align:center;font-size:50px;margin-top: 50px;text-shadow: 1px 1px 0px green;">Infinite Table</h1>
 
 
 
@@ -275,3 +240,4 @@ text-decoration: underline;
 </body>
 
 </html>
+
