--- a/draws.html
+++ b/draws.html
@@ -140,7 +140,7 @@ js-preloader {
 {
 
 margin:auto;
-width:40%;
+width:30%;
 margin-top:50px;
 text-align:centre;
 }
@@ -151,7 +151,7 @@ list-style:none;
 padding:30px;
 transition:1s;
 text-align: center;
-font-size: 30px;
+font-size: 20px;
 text-decoration:overline;
 transition:2s;
 
@@ -161,7 +161,7 @@ transition:2s;
 
 #navbar ol li:hover
 {
-transform:scale(1)rotate(6deg);
+transform:scale(1);
 border-radius:20px;
 text-decoration: none;
 
@@ -171,8 +171,7 @@ text-decoration: none;
 
 
 a:link{color:black;text-decoration:wavy}
-a:visited{color:black;}
-a:active{background:orange;}
+
 
 
 
@@ -208,7 +207,7 @@ a:active{background:orange;}
 
 
 
-<h1 style="text-align: center; font-size: 50px;margin-top: 50px;text-shadow: 1px 1px 0px green;">Drew</h1>
+<h1 style="text-align:center; font-size: 50px;margin-top: 50px;text-shadow: 1px 1px 0px green;">Drew</h1>
 
 
 
@@ -243,3 +242,4 @@ a:active{background:orange;}
 </body>
 
 </html>
+
